apps/nextcloud/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    gethomepage.dev/app: nextcloud
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/href: https://nextcloud.trusted.nirmalhk7.com
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=nextcloud"
    gethomepage.dev/icon: nextcloud-blue
    gethomepage.dev/name: NextCloud
    gethomepage.dev/widget.key: TOKEN
    gethomepage.dev/widget.type: nextcloud
    gethomepage.dev/widget.url: /nextcloud
  name: nextcloud
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`nextcloud.trusted.nirmalhk7.com`)
    middlewares:
    - name: mgd-multimedia-https
    - name: mgd-multimedia-ratelimit
    - name: mgd-multimedia-headervalidation
    services:
    - name: nextcloud
      port: 8080
  tls:
    secretName: nextcloud-tls
